--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
+@import url(../vendor/fonts.css);
 @import url(../vendor/normalize.css);
 @import url(../blocks/content.css);
 @import url(../blocks/footer.css);
