--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,5 @@
 @import url(../blocks/intro.css);
 @import url(../blocks/lead.css);
 @import url(../blocks/page.css);
+@import url(../blocks/photo-grid.css);
+@import url(../blocks/places.css);
