--- a/blocks/lead.css
+++ b/blocks/lead.css
@@ -13,7 +13,7 @@
   color: #FFFFFF;
   max-width: 720px;
   font-family: "Inter", "sans-serif";
-  font-style: normal
+  font-style: normal;
 }
 
 .lead__subtitle{
