--- a/blocks/places.css
+++ b/blocks/places.css
@@ -23,7 +23,7 @@
   font-weight: 900;
   line-height: 76px;
   text-align: left;
-  max-width: 460px;
+  width: 460px;
   color: white;
   margin: 0;
 }
@@ -70,7 +70,6 @@
   align-self: flex-start;
   margin: 0;
   width: 484px;
-
 }
 
 .places__paragraph{
@@ -115,3 +114,121 @@
   box-shadow: 5px 5px 10px 0px #00000040;
 }
 
+@media screen and (max-width: 768px){
+  .places{
+    max-width: 720px;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 88px;
+   }
+
+   .places__container{
+    gap: 28px;
+    margin-bottom: 44px;
+   }
+
+   .places__title{
+   font-size: 42px;
+   font-weight: 900;
+   line-height: 46px;
+   text-align: left;
+   max-width: 340px;
+   margin-bottom: 20px;
+   }
+
+   .places__image{
+    max-width: 340px;
+    max-height: 340px;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+  }
+
+  .places__author{
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: 20px;
+  }
+
+  .places__description{
+    max-width: 352px;
+  }
+
+  .places__paragraph{
+    font-size: 16px;
+    line-height: 26.1px;
+  }
+
+  .places__button{
+    max-width: 315px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .places{
+    max-width: 320px;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 62px;
+   }
+
+   .places__container{
+    display: grid;
+      grid-template-areas:
+      "title "
+      "creator"
+      "image"
+      "paragraph"
+      "button";
+      grid-template-columns: unset;
+     gap: 30px;
+   }
+
+   .places__title{
+    font-size: 32px;
+    line-height: 35px;
+    text-align: left;
+    max-width: 288px;
+    margin-bottom: 0;
+    margin-left: 16px;
+    }
+
+    .places__creator{
+      margin-left: 16px;
+    }
+
+    .places__artist{
+      margin-top: 0;
+    }
+
+    .places__author{
+      font-size: 18px;
+      line-height: 22px;
+      margin-bottom: 0;
+    }
+
+    .places__image{
+      max-width: 320px;
+      max-height: 320px;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+    }
+
+    .places__description{
+      max-width: 288px;
+      margin-left: 16px;
+    }
+
+    .places__button{
+      max-width: 245px;
+      border-radius: 4px;
+      padding: 15px 22px 16px 21px;
+      margin-top: 0;
+      margin-left: 16px;
+      font-size: 14px;
+      line-height: 16.94px;
+      text-align: center;
+      margin-bottom: 22px ;
+    }
+}
