--- a/blocks/places.css
+++ b/blocks/places.css
@@ -35,6 +35,7 @@
   width: 100%;
   height: 100%;
   margin: 0;
+  box-shadow: 10px 10px 25px 0px #00000080;
 }
 
 .places__creator{
@@ -88,7 +89,7 @@
   max-width: 356.08px;
   border-radius: 4px;
   padding: 13px 20px;
-  background: linear-gradient(90deg, #0278fe 0%, #003a7b 100%);
+  background: linear-gradient(90deg, #0278FE 0%, #003A7B 99.98%);
   box-shadow: 5px 5px 10px 0px #00000040;
   font-family: Inter, "sans-serif";
   font-size: 18px;
@@ -101,16 +102,9 @@
   margin-top: 8px;
 }
 
-.places__image:hover {
-  box-shadow: 10px 10px 25px 0px #00000080;
-}
-
 .places__button:hover {
   background: linear-gradient(
-    90deg,
-    rgba(2, 120, 254, 0.25) 0%,
-    rgba(0, 58, 123, 0.25) 99.98%
-  );
+    90deg,rgba(2, 120, 254, 0.25) 0%, rgba(0, 58, 123, 0.25) 99.98%);
   box-shadow: 5px 5px 10px 0px #00000040;
 }
 
@@ -144,10 +138,13 @@
     margin: 0;
   }
 
+  .places__creator{
+    margin-bottom: 20px;
+  }
+
   .places__author{
     font-size: 16px;
     line-height: 26px;
-    margin-bottom: 20px;
   }
 
   .places__description{
@@ -195,6 +192,7 @@
 
     .places__creator{
       margin-left: 16px;
+      margin-bottom: 0px;
     }
 
     .places__artist{
@@ -205,6 +203,7 @@
       font-size: 18px;
       line-height: 22px;
       margin-bottom: 0;
+      max-width: 288px ;
     }
 
     .places__image{
