--- a/blocks/places.css
+++ b/blocks/places.css
@@ -35,7 +35,8 @@
   width: 100%;
   height: 100%;
   margin: 0;
-  box-shadow: 10px 10px 25px 0px #00000080;
+  background: #000000;
+  box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.50);
 }
 
 .places__creator{
@@ -90,7 +91,7 @@
   border-radius: 4px;
   padding: 13px 20px;
   background: linear-gradient(90deg, #0278FE 0%, #003A7B 99.98%);
-  box-shadow: 10px 10px 25px 0px #00000080;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   font-family: Inter, "sans-serif";
   font-size: 18px;
   font-weight: 600;
@@ -102,10 +103,17 @@
   margin-top: 8px;
 }
 
+.places__image:hover {
+  box-shadow: 10px 10px 25px 0px #00000080;
+  opacity: 50%;
+}
+
 .places__button:hover {
   background: linear-gradient(
-    90deg,rgba(2, 120, 254, 0.25) 0%, rgba(0, 58, 123, 0.25) 99.98%);
-  box-shadow: 5px 5px 10px 0px #00000040;
+    90deg,
+    rgba(2, 120, 254, 0.25) 0%,
+    rgba(0, 58, 123, 0.25) 99.98%
+  );
 }
 
 @media screen and (max-width: 768px){
